--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,102 @@
 body {
     text-align: center;
     background-color: #ACC09D;
-    
+    overflow: hidden;
 }
+
+@media handheld,
+only screen and (max-width: 719px) {
+
+    .title {
+        max-width: 400px;
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        padding: 0;
+    }
+
+    .title h1 {
+        font-size: 2rem;
+        margin: 0;
+        padding: 0;
+    }
+
+    .title h3 {
+        font-size: 1.3rem;
+
+    }
+
+    .container {
+        display: flex;
+
+        flex-wrap: wrap;
+        max-width: 400px;
+
+    }
+
+    .signature {
+        margin: 0 auto;
+    }
+
+    .footer {
+        position: relative;
+
+    }
+
+    .quote-cont {
+        display: flex;
+
+        flex-wrap: wrap;
+        max-width: 400px;
+    }
+}
+
+@media (min-width: 719px) and (max-width: 1050px) {
+    .title {
+        max-width: 90%;
+        margin-bottom: 0;
+
+    }
+
+    .title h1 {
+        font-size: 3rem;
+        margin: 0;
+        padding: 0;
+    }
+
+    .title h3 {
+        font-size: 1.3rem;
+
+    }
+
+    .container {
+        display: grid;
+        margin-top: 0;
+        flex-wrap: wrap;
+        max-width: 90%;
+        margin-bottom: 0;
+    }
+
+    .container img .button {
+        display: grid;
+    }
+
+    .signature {
+        margin: 0 auto;
+    }
+
+    .footer {
+        position: relative;
+
+    }
+
+
+
+
+
+
+}
+
 
 @font-face {
     font-family: 'American Typewriter Regular';
@@ -15,13 +109,14 @@ body {
 }
 
 .title {
-  font-family: 'American Typewriter Regular', Helvetica, sans-serif; 
-  width: 1000px;
-  height: 130px;
-  margin: 0 auto;
-  border: 3px solid black;
-  border-radius:10px;
-  background-color: #ACC09D;
+    font-family: 'American Typewriter Regular', Helvetica, sans-serif;
+    width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+    border: 3px solid black;
+    border-radius: 10px;
+    background-color: #ACC09D;
+    padding: 0 15px 20px;
 }
 
 
@@ -39,11 +134,11 @@ h3 {
     width: 1000px;
     margin: 30px auto 0;
     text-align: center;
-    
+
 }
 
 .button {
-    font-family: 'American Typewriter Regular', sans-serif; 
+    font-family: 'American Typewriter Regular', sans-serif;
     font-weight: bold;
     border-radius: 10px;
     width: 200px;
@@ -67,14 +162,14 @@ h3 {
     width: 600px;
     max-height: 200px;
     margin: 10px auto 5px;
-    
+
     padding: 20px 20px 0 20px;
-    border-radius:10px;
-    
+    border-radius: 10px;
+
 }
 
 .signature {
-    font-size: 1rem; 
+    font-size: 1rem;
     font-family: 'American Typewriter Regular', sans-serif;
     margin-top: 10px;
 }
@@ -84,19 +179,19 @@ h3 {
     height: 400px;
     margin: 10px auto;
     border: 1px solid black;
-    border-radius:10px;
-    
+    border-radius: 10px;
+
 }
 
 #char-img {
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    border-radius:10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 .footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     width: 100%;
 }
@@ -106,5 +201,5 @@ h3 {
 .copyright {
     font-family: 'American Typewriter Regular', sans-serif;
     font-weight: 500;
-    font-size: 1rem;    
+    font-size: 1rem;
 }
