--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@ body {
     text-align: center;
     background-color: #ACC09D;
     overflow-x: hidden;
-    
+
     display: block;
 }
 
 @media handheld,
 only screen and (max-width: 719px) {
+
 
     .title {
         max-width: 340px;
@@ -23,7 +24,7 @@ only screen and (max-width: 719px) {
         padding: 0;
     }
 
-    
+
 
     .title h3 {
         font-size: 1.5rem;
@@ -38,8 +39,12 @@ only screen and (max-width: 719px) {
 
     }
 
+
     .signature {
         margin: 0 auto;
+        display: flex;
+
+        flex-wrap: wrap;
     }
 
     .footer {
@@ -52,6 +57,10 @@ only screen and (max-width: 719px) {
 
         flex-wrap: wrap;
         max-width: 380px;
+    }
+
+    .quote {
+        font-size: 1.3rem !important;
     }
 }
 
@@ -151,10 +160,12 @@ h3 {
     margin: 20px auto 0;
     padding: 8px 20px 8px 20px;
     background-color: #ACC09D;
+    cursor: pointer;
 }
 
 .button:hover {
     background-color: #E6E1CF;
+    transition: 0.7s;
 }
 
 
@@ -172,10 +183,13 @@ h3 {
 
 }
 
+
+
 .signature {
     font-size: 1rem;
     font-family: 'American Typewriter Regular', sans-serif;
     margin-top: 10px;
+
 }
 
 .img {
@@ -196,7 +210,7 @@ h3 {
 
 .footer {
     margin-top: 50px;
-    
+
     width: 100%;
 }
 
@@ -207,5 +221,5 @@ h3 {
     font-weight: 500;
     font-size: 1rem;
     padding-top: 130px;
-    
+
 }
