--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,12 @@ only screen and (max-width: 719px) {
     }
 
     .quote {
-        font-size: 1.275rem !important;
+        font-size: 1.150rem !important;
+        
+    }
+    .signature {
+        font-size: 0.90rem !important;
+        
     }
 }
 
